Implement all of teams except actually showing them on the leaderboard page
