# src/lib/api/leaderboard.ts
@@ -1,14 +1,15 @@
 import { callApiV1 } from '../api.ts';
 
 import type {
-  LeaderboardSummary, Leaderboard, LeaderboardMember, LeaderboardStarResponse, Participant, Participation, Membership,
+  LeaderboardSummary, Leaderboard, LeaderboardTeam, LeaderboardMember, LeaderboardStarResponse, Participant, Participation, Membership,
   LeaderboardCreatePayload, LeaderboardUpdatePayload, LeaderboardStarPayload,
+  LeaderboardTeamCreatePayload, LeaderboardTeamUpdatePayload,
   LeaderboardMemberUpdatePayload,
   LeaderboardParticipationPayload,
 } from 'server/api/v1/leaderboard.ts';
 
 export type {
-  LeaderboardSummary, Leaderboard, LeaderboardMember, LeaderboardStarResponse, Participant, Participation, Membership,
+  LeaderboardSummary, Leaderboard, LeaderboardTeam, LeaderboardMember, LeaderboardStarResponse, Participant, Participation, Membership,
   LeaderboardCreatePayload, LeaderboardUpdatePayload, LeaderboardStarPayload,
   LeaderboardMemberUpdatePayload,
   LeaderboardParticipationPayload,
@@ -21,11 +22,11 @@ export async function listLeaderboardSummaries() {
 }
 
 export async function getLeaderboard(uuid: string) {
-  return callApiV1<Leaderboard>(ENDPOINT + `/${uuid}`, 'GET');
+  return callApiV1<LeaderboardSummary>(ENDPOINT + `/${uuid}`, 'GET');
 }
 
 export async function getLeaderboardByJoinCode(joincode: string) {
-  return callApiV1<Leaderboard>(ENDPOINT + `/joincode/${joincode}`, 'GET');
+  return callApiV1<LeaderboardSummary>(ENDPOINT + `/joincode/${joincode}`, 'GET');
 }
 
 export async function createLeaderboard(data: LeaderboardCreatePayload) {
@@ -45,12 +46,32 @@ export async function deleteLeaderboard(uuid: string) {
   return callApiV1<Leaderboard>(ENDPOINT + `/${uuid}`, 'DELETE');
 }
 
+export async function listTeams(uuid: string) {
+  return callApiV1<LeaderboardTeam[]>(ENDPOINT + `/${uuid}/teams`, 'GET');
+}
+
+export async function getTeam(uuid: string, teamId: number) {
+  return callApiV1<LeaderboardTeam>(ENDPOINT + `/${uuid}/teams/${teamId}`, 'GET');
+}
+
+export async function createTeam(uuid: string, data: LeaderboardTeamCreatePayload) {
+  return callApiV1<LeaderboardTeam>(ENDPOINT + `/${uuid}/teams`, 'POST', data);
+}
+
+export async function updateTeam(uuid: string, teamId: number, data: LeaderboardTeamUpdatePayload) {
+  return callApiV1<LeaderboardTeam>(ENDPOINT + `/${uuid}/teams/${teamId}`, 'PATCH', data);
+}
+
+export async function deleteTeam(uuid: string, teamId: number) {
+  return callApiV1<LeaderboardTeam>(ENDPOINT + `/${uuid}/teams/${teamId}`, 'DELETE');
+}
+
 export async function listMembers(uuid: string) {
   return callApiV1<Membership[]>(ENDPOINT + `/${uuid}/members`, 'GET');
 }
 
 export async function updateMember(uuid: string, memberId: number, data: LeaderboardMemberUpdatePayload) {
-  return callApiV1<Membership[]>(ENDPOINT + `/${uuid}/members/${memberId}`, 'PATCH', data);
+  return callApiV1<Membership>(ENDPOINT + `/${uuid}/members/${memberId}`, 'PATCH', data);
 }
 
 export async function removeMember(uuid: string, memberId: number) {
